fix: small stage image alignment (#364)

--- a/projects/ng-aquila/src/small-stage/small-stage.component.scss
+++ b/projects/ng-aquila/src/small-stage/small-stage.component.scss
@@ -34,7 +34,7 @@
 .image-end,
 .image-bottom {
   display: flex;
-  align-items: end;
+  align-items: flex-end;
 }
 
 ::ng-deep nx-small-stage-image {
